[package]
name = "web-scraping"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shifter Web Scraping is an API that allows scraping websites while using rotating proxies to prevent bans. This SDK for Rust makes the usage of the API easier to implement in any project you have."
keywords = ["scraping", "scrape", "proxy", "shifterwebscraping", "webscrapingapi", "scrapingapi", "shifter"]
homepage = "https://shifter.io/"
documentation = "https://docs.rs/web-scraping"
repository = "https://github.com/shifter-io/rust-scraping-sdk"
readme = "readme.MD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = "2.1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }